[project]
name = "greek-mm"
version = "0.1.0"
description = "Python Bebop RFQ maker for the Greek options protocol — flat price placeholder + OptionCreated indexer"
readme = "README.md"
authors = [
    { name = "Mahmoud Lababidi", email = "mahmoud@mahmoud.one" }
]
requires-python = ">=3.12"
dependencies = [
    "eth-account>=0.13.7",
    "protobuf>=7.35.0",
    "python-dotenv>=1.2.2",
    "web3>=7.16.0",
    "websockets>=15.0.1",
]

[project.scripts]
greek-mm-bebop = "greek_mm.modes.bebop:main"
greek-mm-show = "greek_mm.modes.show:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/greek_mm/bebop/proto/*_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "ARG", "SIM", "RUF", "ASYNC"]
ignore = [
    "S101",   # asserts are fine in tests
    "S104",   # binding 0.0.0.0 is intentional (Fly container)
    "S311",   # random is for quote IDs/nonces alongside timestamps, not key material
    "E501",   # long lines in log/error strings
    "N803",   # chainId query params mirror the node API
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
# grpcio-tools is invoked one-off for proto codegen:
#   uv run --no-project --python 3.12 --with grpcio-tools \
#     python -m grpc_tools.protoc -Iproto --python_out=src/greek_mm/bebop/proto \
#     proto/pricing.proto
