[project]
name = "greek-maker"
version = "0.1.0"
description = "Bebop options market maker — streams prices and signs RFQ quotes"
readme = "README.md"
authors = [{ name = "Mahmoud Lababidi", email = "mahmoud@mahmoud.one" }]
requires-python = ">=3.12"
dependencies = [
    "eth-account>=0.13.7",
    "python-dotenv>=1.2.2",
    "web3>=7.16.0",
    "websockets>=15.0.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
